--- a/assets/css/hawthorne_type1_color2.css
+++ b/assets/css/hawthorne_type1_color2.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,800italic,400,300,700,800);
+@import url(//fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,800italic,400,300,700,800);
 /*==================================================================================================
 Foundation Variables
 ==================================================================================================*/
